Sticky position safari fix

--- a/_sass/_product-header.scss
+++ b/_sass/_product-header.scss
@@ -4,6 +4,7 @@
 
 .product__header-nav {
   width: 100%;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -181,6 +182,7 @@
   &.sticky-image {
     .product-image.sticky {
       img {
+        position: -webkit-sticky;
         position: sticky;
         top: 100px;
       }
